--- a/Todo.css
+++ b/Todo.css
@@ -1,6 +1,6 @@
 *{
-  margin: 1;
-  padding: 1;
+  margin: 0px;
+  padding: 0px;
   font-family: 'Roboto', sans-serif;
 
 }
@@ -14,7 +14,7 @@ body{
 
 }
 
-h1{
+.ToDo h1{
   text-align: left;
   padding-left: 30px ;
   margin: 1px;
@@ -23,14 +23,14 @@ h1{
   
 }
 
-.Todo h3{
+.Todo h2{
 
  text-align: center;
  font-size: 40px;
  color: black;
 
 }
-.Todo li {
+.list li {
   font-size: 50px;
   font-weight: bold;
   color: #fff;
@@ -39,7 +39,7 @@ h1{
   
 }
 
-.Todo p{
+.list p{
   font-size: 20px;
   background: #5c5c5c;
   color: #fff;
@@ -78,13 +78,8 @@ h1{
   color: #333;
 }
 
-
-h2 {
  
- color: white;
- text-align: center;
- font
-}
+
 
 .footer {
   background-color: #FFF;
@@ -100,4 +95,22 @@ h2 {
   color: black;
   
   
+}
+
+.list img{
+  width: auto;
+  height: 300px;
+}
+
+.fig {
+
+
+}
+
+
+.aside{ 
+  
+  
+
+
 }
