--- a/contactUS.css
+++ b/contactUS.css
@@ -1,8 +1,12 @@
 *{
-  margin: 1;
-  padding: 1;
+  margin: 0;
+  padding: 0;
   font-family: 'Roboto', sans-serif;
 
+}
+
+hr {
+  margin: 10px;
 }
 
 
@@ -14,24 +18,19 @@ body{
 
 }
 
-h1 {
+.header h1 {
   color: #c25700;
   font-size: 60px;
   padding-left: 20px;
-  margin-bottom: 3%;
+  margin-bottom: 10px;
+  margin-top: 20px;
   
 }
 
 
-h3 {
-  background: #ffffff;
-  color: #c25700;
-  font-size: 40px;
-  text-align: center;
-  
-}
 
-li{
+
+.list li{
   margin-top: 5px;
   background: #fff;
   text-align: center;
@@ -41,18 +40,30 @@ li{
   margin-bottom: 15px;
   
   
+  
+}
+
+h2{
+
+  color: #dff3ff;
+  font-size: 50px;
+  text-align: center;
+
 }
 
 .nav-area{
+  position: relative;
   float: right;
   list-style: none;
-  margin-top: 20px;
-  padding-right: 20px;
+  top: 0px;
+  width: 100%;
+  margin: 20px;
   
 }
 
 .nav-area li{
   display: inline-block;
+  float: right;
   
 }
 
@@ -61,14 +72,14 @@ li{
   text-decoration: none;
   padding: 20px 20px;
   font-size: 20px;
-  margin: 
+  
   
 }
 
 .nav-area li a:hover{
   background: #c25700;
   color: #333;
-  font-size: 50%;
+  font-size: 20px;
   
 }
 
@@ -86,7 +97,7 @@ li{
   font-weight: bold;
 }
   
-h2 {
+.Question h2 {
   
   text-align: center;
   font-size: 50px;
@@ -103,15 +114,16 @@ margin-bottom: 1%;
 }
 
 .comment-box{
-padding-left: 430px;
+
 top: 50%;
-left: 50%;
+left: 30%;
 width: 500px;
+position: relative;
 }
 
 .comment-box h2 {
 
-color: #ff9924;
+color: #001d7c;
 font-weight: bold;
 font-size: 40px;
 margin-bottom: 15px;
@@ -122,7 +134,7 @@ margin-bottom: 15px;
 
 .comment-box input {
   width: 100%;
-  heigth: 50px;
+  height: 50px;
   padding: 0 20px;
   margin-bottom: 15px;
   border-radius: 5px;
@@ -153,7 +165,7 @@ height: 150px;
 .comment-box button {
   border: 0;
   padding: 10px 30px;
-  background: orange;
+  background: #001d7c;
   font-size: 18px;
   border-radius: 5px;
   color: #fff;
