--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   font-family: 'Roboto', sans-serif;
 }
 
+body{
+  background-color: rgb(125, 47, 47);
+}
+
 
 
 
@@ -33,12 +37,11 @@
   
 }
 
-.foot {
-  background-color: #FFF;
+.footer {
+  background-color: rgb(255, 255, 255);
   width: 100%;
-  color: black;
   text-align: center;
-  position: absolute; 
+  position: relative; 
   bottom: 0;
   font-weight: bold;
 }
@@ -53,6 +56,64 @@
   margin-top: 300px;
   padding-left: 120%;
   font-weight: bold;
+}
+
+.footer p{
+color: rgb(3, 3, 3);
+}
+
+.header h1{
+  text-align: center;
+  color: #fff;
+  font-size: 70px;
+  font-style: italic;
+  margin-bottom: 2px;
+}
+
+.ATX img{
+  width: auto;
+  height: 500px;
+  margin-left: 10px;
+}
+
+.Welcome h2{
+  text-align: center;
+  font-size: 50px;
+  font-style: italic;
+  font-weight: bolder;
+  color: #fff;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  
+}
+
+.Welcome h3{
+  text-align: center;
+  color: rgb(92, 193, 227);
+  font-size: 30px;
+  font-style: oblique;
+  font-weight: bold;
+}
+
+.info h2{
+  text-align: left;
+  font-size: 30px;
+  margin-top: 20px;
+  margin-left: 10px;
+  color: #fff;
+  text-decoration: underline;
+
+}
+
+.info p{
+  font-size: 30px;
+  margin-left: 10px;
+  color: rgb(255, 255, 97);
+  padding-left: 200px;
+  padding-right: 200px;
+  margin-top: 30px;
+  font-weight: bold;
+  font-style: italic;
 }
 
 
