--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ body{
   list-style: none;
   margin-top: 20px;
   padding-right: 20px;
+  margin-bottom: 30px;
+  margin-right: 20px;
 }
 
 .nav-area li{
@@ -24,15 +26,15 @@ body{
 }
 
 .nav-area li a{
-  color: rgb(17, 16, 16);
+  color: rgb(255, 255, 255);
   text-decoration: none;
   padding: 5px 20px;
-  font-size: 14px;
+  font-size: 20px;
   
 }
 
 .nav-area li a:hover{
-  background: rgb(221, 15, 15);
+  background: rgb(93, 178, 206);
   color: rgb(28, 25, 25);
   
 }
@@ -47,15 +49,31 @@ body{
 }
 
 .aside {
-  width: 20%;
-  padding-left: 15px;
-  margin-left: 15px;
-  float: right;
-  font-style: italic;
-  color: white;
-  margin-top: 300px;
-  padding-left: 120%;
+font-style: italic;
+margin-right: 1210px;
+position: relative;
+left: 40px;
+bottom: 300px;
+text-align: left;
+color: #f7952b;
+}
+
+.aside h3{
+  font-size: 40px;
+  font-weight: bolder;
+}
+
+.aside label{
+  color: #fff;
   font-weight: bold;
+}
+
+.aside p{
+  margin-bottom: 7px;
+}
+
+.aside button{
+  margin-top: 6px;
 }
 
 .footer p{
@@ -68,6 +86,7 @@ color: rgb(3, 3, 3);
   font-size: 70px;
   font-style: italic;
   margin-bottom: 2px;
+  margin-right: 10px;
 }
 
 .ATX img{
@@ -115,6 +134,21 @@ color: rgb(3, 3, 3);
   font-weight: bold;
   font-style: italic;
 }
+
+.ACL img{
+  width: auto;
+  height: 400px;
+  margin-left: 400px;
+  margin-top: 30px;
+}
+
+.ACL figcaption{
+  color: #fff;
+  text-align: center;
+  padding-right: 650px;
+}
+
+
 
 
 
